# HealthReport

./: .env.example  .gitignore  HealthReport_Project_Documentation.docx  HealthReport_Strava_Sync_Documentation.docx  README.md  auth.py  config.py  export.py  fetch.py  main.py  pyproject.toml  requirements.txt  state.example.json  state.json  tokens.py  transform.py  versions.txt  walking_dashboard.py
InstructorNotes/: instructor_notes.ipynb
healthreport/: __init__.py  auth.py  cli.py  client.py  config.py  exceptions.py  export.py  io_utils.py  service.py  storage.py  tokens_cli.py  transform.py  ui_data.py
scripts/: install_launchd.sh  run_dashboard.sh  sync_only.sh  sync_then_dashboard.sh
tests/: test_auth.py  test_client.py  test_scripts.py  test_service.py  test_storage.py  test_transform.py  test_ui_data.py
