[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "healthreport-strava-sync"
version = "0.1.0"
description = "Sync Strava activities into local CSV and Excel reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]

[project.scripts]
healthreport-sync = "main:main"
healthreport-strava-tokens = "tokens:main"

[tool.setuptools]
py-modules = ["auth", "config", "export", "fetch", "main", "tokens", "transform"]
