[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "healthreport-strava-sync"
version = "0.2.0"
description = "Sync Strava activities into local SQLite storage, CSV/XLSX reports, and a Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "plotly>=5.20.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "streamlit>=1.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
healthreport-sync = "healthreport.cli:main"
healthreport-strava-tokens = "healthreport.tokens_cli:main"

[tool.setuptools]
packages = ["healthreport"]
py-modules = [
    "auth",
    "config",
    "export",
    "fetch",
    "main",
    "tokens",
    "transform",
    "walking_dashboard",
]
